--- a/NEWS.org
+++ b/NEWS.org
@@ -4,13 +4,14 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
 ** Version 16.1.1 Mai 2015
 
-- The command `ansys-send-to-ansys' (C-c C-c) grabs now the current
-  paragraph, when there is no region marked.
-
 - The command `ansys-send-to-ansy-and-proceed' (C-c C-j) is now
   interactive, i. e. after invoking this command with its key-sequence
   "C-c C-j" it can be repeated by typing just the final character "j"
   (or "C-j").
+
+- The command `ansys-send-to-ansys' (C-c C-c) grabs now the current
+  paragraph, when there is no region marked.  And the cursor doesn't
+  skip to the next code line without a prefix argument "C-u".
 
 - The `ansys-show-command-parameters' (M-?) tooltip can now be
   switched immediately off with a prefix argument of zero.
@@ -23,6 +24,8 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
 - Is packaged with the current stable version (24.5) of Emacs and
   updated for ANSYS 16.
+
+- Renamed README, NEWS and TODO to *.org
 
 ** Version 15.0.1 Aug 2014
 
@@ -309,13 +312,13 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
   solver interprets this as a space holder for the last command
   keyword (the Ansys default command concept).
 
-- Extended documentation, code cleaning and simplification of
-  commands (e.g. comment handling) with the application of standard
-  Emacs 22 facilities among other things.
+- Extended documentation, code cleaning and simplification of commands
+  (e.g. comment handling) with the application of standard Emacs 22
+  facilities among other things.
 
+# The following is for Emacs
 # local variables:
 # word-wrap: t
 # show-trailing-whitespace: t
 # indicate-empty-lines: t
-# mode: org
 # end:
