--- a/README.org
+++ b/README.org
@@ -30,23 +30,21 @@ yet free - editor. High quality software available for every operating
 system where ANSYS is running.
 
 The current stable version 16.1.1 of ANSYS-Mode is available at the
-[[https://github.com/dieter-wilhelm/ansys-mode/releases][Github releases site]] or at [[https://drive.google.com/drive/folders/0Bxnk08BGWfexUThqbWxLX1NyeTg][Google's ANSYS-Mode drive]].
-
-Or via command line way, e. g. for the windows version bundled with
-Emacs:
+[[https://github.com/dieter-wilhelm/ansys-mode/releases][Github releases site]] or at [[https://drive.google.com/drive/folders/0Bxnk08BGWfexUThqbWxLX1NyeTg][Google's ANSYS-Mode drive]].  Or via command
+line way, e. g. for the windows version bundled with Emacs:
 #+BEGIN_SRC sh
 wget https://github.com/dieter-wilhelm/ansys-mode/releases/download/release-16.1.1/ansys-mode-16.1.1.emacs-24.5-bin-i686-mingw32.zip
 #+END_SRC
 
-And for the sources
+And for the sources tar package:
 #+BEGIN_SRC sh
 wget https://github.com/dieter-wilhelm/ansys-mode/archive/release-16.1.1.tar.gz
 #+END_SRC
 
 Some code (completions, help strings etc.) is based on the
 documentation of the latest ANSYS version.  Besides source files and
-Emacs you will find in the download section tutorials.  For an
-immediate access have a look at the
+the Emacs editor you will find tutorials in the download section.  For
+an immediate impression have a look at the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_introductory_tutorial.html
 introductory on-line version], here you are able to see the images in
 a higher resolution as in the PDF version.  And in the
@@ -197,7 +195,7 @@ remove the .elc files.)
 - default.el -- Configuration (example) file
 - helper/example.dat -- WorkBench example APDL solver input file
 - helper/example.anf -- ANSYS geometry neutral file example
-- helper/fontification.mac -- APDL user macro and highlighting example
+- helper/example.mac -- APDL user macro and highlighting example
 - doc/A-M_introductory_tutorial-16.1.1.pdf -- Your first look at ANSYS-Mode?
 - doc/A-M_in-depth_tutorial-16.1.1.pdf -- A hands-on ANSYS-Mode tutorial
 - doc/A-M_in-depth_tutorial-16.1.1.ansys -- Hands-on tutorial's supplementary APDL code
@@ -216,7 +214,7 @@ Windows start menu (please refer to the README.W32 file) otherwise
 start the Emacs executable runemacs.exe from there.
 
 ANSYS-Mode is now immediately available, by opening (check out the
-`fontification.mac' example) or by creating a new APDL file with a
+`example.mac' example) or by creating a new APDL file with a
 .mac suffix.  Have fun!
 
 Most functionalities should work out of the box, but if you have NOT
