--- a/TODO.org
+++ b/TODO.org
@@ -42,7 +42,7 @@ r  - Navigation ::  C-c { does not skip an overlay in a number-block
    - Display hints for the shortened key(s) for C-c C-j
    - Indicate visually the region which was copied or send for
      func. -send-to-ansys
-   - Rename fontification.mac -> example.mac & make it solver compatible
+   - example.mac: make it solver compatible
    - GH-pages with tutorials
    - GH-wiki pages
 * 16.1.1:
@@ -66,11 +66,8 @@ r  - Navigation ::  C-c { does not skip an overlay in a number-block
 	 M-? shows help for *mwrite, when cursor behind *cfclos
    - -skeleton-information returns: file-name-extension: Wrong type argument: stringp, nil
 ** Release June
-   - complete the template choise section in the menu
+   - complete the template choice section in the menu
    - Correct the creep data with total strain to creep strain!
-   - automatised PDFs
-   - makefile fontification of _tutorial PDFs is not working,
-     necessary to load them by hand before exporting
    - makefile errors: Check tutorials
    - makefile errors when doing -fontification.el
    - ansys-template.el:85:13:Warning: reference to free variable
@@ -360,6 +357,7 @@ r  - Navigation ::  C-c { does not skip an overlay in a number-block
      command line (restriction of 7 characters with out the colon.)
      must *go:label be unambiguous?
 ** Miscellaneous
+   - hash or signature file for packages
    - show content of matlib/ folder
    - add to -display-variables a prefix argument for showing the value
      of the variable around point, or center the variables window...
