--- a/README.org
+++ b/README.org
@@ -398,17 +398,19 @@ ANSYS-Mode changes the default behaviour of Emacs
 
 globally:
 
-- Switches on font-lock-mode if toggled off, e.g when calling Emacs with
-  the -D (basic display) option
-- Activated Delete Selection Mode ~(delete-selection-mode t)~
-- Activated Show Paren Mode ~(show-paren-mode t)~
-- Advised M-w (kill-ring-save) without active region to copy the whole line
+- Switches on font-lock-mode if toggled off, e.g when calling Emacs
+  with the -D (basic display) option
+- Show Parentheses Mode is activated ~(show-paren-mode t)~
+- Advised M-w (kill-ring-save) without active region to copy the whole
+  line
 
 (Delete Selection Mode can be switched off in the ANSYS-Mode menu.)
 
 locally:
-- (setq scroll-preserve-screen-position t)
-- Changed M-h (mark-paragraph) to move the cursor to the end of the region
+- ~(setq scroll-preserve-screen-position t)~
+- ~(toggle-truncate-lines 1)~ truncate long lines, don't wrap them
+- Changed `mark-paragraph' (M-h) to move the cursor to the end of the
+  region
 
 * Acknowledgements
 
@@ -419,7 +421,7 @@ For their ansys-mod.el from 1997 which triggered the idea in 2006 to
 start ANSYS-Mode as a GNU public license (GPL) implementation with an
 extended feature set.
 
-Further acknowledgements in mainly reverse chronological order:
+Further acknowledgements (in mainly reverse chronological order):
 
 - Mehmet Akgul
 - Nish Joseph
