--- a/NEWS.org
+++ b/NEWS.org
@@ -1,11 +1,14 @@
+#+STARTUP: content
 * News and History
 
 Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
 ** Version 16.1.1 Mai 2015
 
-   - The command `ansys-show-command-parameters' does now count and
-     visualise the position of parameters.
+   - The command `ansys-show-command-parameters' (M-?) does
+     additonally count the number of parameters and visualise at which
+     parameter position the cursor currently is.  This tooltip can now
+     be switched off with a prefix argument of zero.
 
    - The command `ansys-send-to-ansy-and-proceed' (C-c C-j) is now
      interactive, i. e. after invoking this command with its key-sequence
@@ -15,9 +18,6 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
    - The command `ansys-send-to-ansys' (C-c C-c) grabs now the current
      paragraph, when there is no region marked.  And the cursor doesn't
      skip to the next code line without a prefix argument "C-u".
-
-   - The `ansys-show-command-parameters' (M-?) tooltip can now be
-     switched immediately off with a prefix argument of zero.
 
    - The output buffer *ANSYS* of the interpreter commands might now
      reside on a another Emacs frame.
